--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Heroku Test</title>
-  <link rel="stylesheet" href="/css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>ha dumbass youre hacked now im in the mainframe</h1>
   <h2>bet your dumb enough to also click that button</h2>
   <button>do it i dare you</button>
+  <script src='/js'></script>
 </body>
 </html>
